k8s/coma/apps/legacy/ferrite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ferrite
  namespace: ferrite
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-hsts@kubernetescrd
spec:
  rules:
    - host: "nikolaipatrick.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ferrite-ferritecms
                port:
                  number: 80
  tls:
    - hosts:
        - "nikolaipatrick.com"
      secretName: artichokecc-cert
